fixes footer bug on safari mobile

--- a/client/index.scss
+++ b/client/index.scss
@@ -45,6 +45,7 @@ body {
   position: fixed;
   font-family: 'Fira Sans';
   width: 100%;
+  height: 100%;
 
   a {
     text-decoration: none;
@@ -104,7 +105,14 @@ body {
   }
 }
 
+#app, .app {
+  height: 100%;
+}
+
 .colors {
+  height: 90% !important;
+  position: relative;
+
   div {
   width: 110vw;
   margin-left: -5vw;
@@ -150,11 +158,9 @@ body {
   }
 
   &-blue {
-    top: 90vh;
-    -ms-transform: translateZ(0);
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    position: fixed;
+    position: absolute;
+    bottom: 0;
+    vertical-align: bottom;
     background: linear-gradient(to left, rgba(27, 44, 99, 0.99), rgba(255, 255, 255, 0));
   }
 }
@@ -270,15 +276,17 @@ body {
   display: flex;
   flex-direction: row !important;
   margin-top: 2vh;
+  padding-bottom: 4vh;
   justify-content: flex-end !important;
   margin-left: 0 !important;
   width: 100vw !important;
+  height: 12vh;
   -webkit-animation: flyinfrombottom 3.5s ease-in-out;
 }
 
 img {
-  width: 6vmin;
-  height: 6vmin;
+  width: 6vh;
+  height: 6vh;
   margin-left: 3vw;
 }
 
